--- a/about.html
+++ b/about.html
@@ -252,7 +252,6 @@
             </div>
             <div class="team-card-box">
                 <div class="team-card">
-                    <img class="worker-img" src="./img/about/PNGs/ofitsant.png" alt="vaqtinchalik">
                     <div class="team-card-content">
                         <h1 class="worker-name">Max Scholz</h1>
                         <h3 class="worker-work">CEO Connect</h3>
@@ -273,10 +272,9 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img class="worker-img" src="./img/about/PNGs/ofitsant.png" alt="vaqtinchalik">
                     <div class="team-card-content">
-                        <h1 class="worker-name">Max Scholz</h1>
-                        <h3 class="worker-work">CEO Connect</h3>
+                        <h1 class="worker-name">Lars Stein</h1>
+                        <h3 class="worker-work">COO Connect</h3>
                         <div class="team-card-logo">
                             <a href="#" class="logo">
                                 <img class="logo" src="./img/about/icons/facebook (1).svg" alt=".">
@@ -294,10 +292,9 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img class="worker-img" src="./img/about/PNGs/ofitsant.png" alt="vaqtinchalik">
                     <div class="team-card-content">
-                        <h1 class="worker-name">Max Scholz</h1>
-                        <h3 class="worker-work">CEO Connect</h3>
+                        <h1 class="worker-name">Bejamin Oworae</h1>
+                        <h3 class="worker-work">Marketing lead Connect</h3>
                         <div class="team-card-logo">
                             <a href="#" class="logo">
                                 <img class="logo" src="./img/about/icons/facebook (1).svg" alt=".">
@@ -317,6 +314,120 @@
             </div>
         </div>
     </section>
+    <section class="talk" id="contact">
+        <div class="talk_container">
+            <div class="talk_input_box">
+                <form action="#">
+                    <div class="form_names">
+                        <input required class="names" type="text" placeholder="First Name">
+                        <input required class="names" type="text" placeholder="Last Name">
+                    </div>
+                    <input required class="full_w" type="email" placeholder="Your Email">
+                    <input required class="full_w" type="text" placeholder="Company Name">
+                    <div class="form_names">
+                        <input required class="info" type="tel" placeholder="Phone Number">
+                        <input required class="info" type="text" placeholder="Adress">
+                    </div>
+                    <button class="send">
+                        SEND
+                    </button>
+                </form>
+            </div>
+            <div class="talk_content_box">
+                <h1 class="talk_title">Let’s Talk Business</h1>
+                <span class="talk_line"></span>
+                <p class="talk_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum
+                    velit. Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros,
+                    rhoncus sit amet dapibus ut.</p>
+                <button class="contact_us">
+                    Contact Us
+                </button>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="footer_box">
+                <ul class="footer_nav">
+                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">Home</a></li>
+                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">About</a></li>
+                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">Services</a></li>
+                </ul>
+                <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet nulla in
+                    odio
+                    ves tibulum porta.</p>
+                <ul class="footer_list">
+                    <li class="footer_item"><a href="#" class="footer_link">FAQS</a></li>
+                    <li class="footer_item"><a href="#" class="footer_link">BLOGS</a></li>
+                    <li class="footer_item"><a href="./index.html#contact" class="footer_link">CONTACTS</a></li>
+                </ul>
+            </div>
+            <div class="footer_logo_box">
+                <a href="https://www.facebook.com" target="_blank" class="logo">
+                    <svg width="34.010742" height="34.010742" viewBox="0 0 34.0107 34.0107" fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                            Created with Pixso.
+                        </desc>
+                        <defs />
+                        <rect id="Rectangle 2" rx="17.005371" width="34.010742" height="34.010742" fill="currentColor"
+                            fill-opacity="1.000000" />
+                        <path id="Vector"
+                            d="M20.481 17.7231L20.9221 14.9004L18.1638 14.9004L18.1638 13.0688C18.1638 12.2969 18.5491 11.5439 19.7845 11.5439L21.0385 11.5439L21.0385 9.14111C21.0385 9.14111 19.9005 8.9502 18.8125 8.9502C16.541 8.9502 15.0562 10.3022 15.0562 12.7495L15.0562 14.9004L12.5312 14.9004L12.5312 17.7231L15.0562 17.7231L15.0562 24.5469L18.1638 24.5469L18.1638 17.7231L20.481 17.7231Z"
+                            fill="#0E0E0E" fill-opacity="1.000000" fill-rule="nonzero" />
+                    </svg></a>
+                <a href="https://twitter.com" target="_blank" class="logo">
+                    <svg width="34.010742" height="34.010742" viewBox="0 0 34.0107 34.0107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                            Created with Pixso.
+                        </desc>
+                        <defs />
+                        <rect id="Rectangle 2" rx="17.005371" width="34.010742" height="34.010742" fill="currentColor"
+                            fill-opacity="1.000000" />
+                        <path id="Vector"
+                            d="M22.9425 13.2896C22.9524 13.4409 22.9524 13.5918 22.9524 13.7432C22.9524 18.353 19.7361 23.6646 13.8578 23.6646C12.0468 23.6646 10.3644 23.0923 8.94922 22.0991C9.20654 22.1313 9.45392 22.1421 9.72113 22.1421C11.2155 22.1421 12.591 21.5918 13.6895 20.6523C12.2842 20.6201 11.1066 19.6162 10.7009 18.2339C10.8988 18.2666 11.0967 18.2881 11.3045 18.2881C11.5915 18.2881 11.8785 18.2451 12.1457 18.1694C10.6811 17.8452 9.58258 16.4419 9.58258 14.7471L9.58258 14.7041C10.0081 14.9629 10.5029 15.125 11.0274 15.1465C10.1664 14.5205 9.60236 13.4517 9.60236 12.2422C9.60236 11.5947 9.76068 11.001 10.0378 10.4824C11.6113 12.5986 13.9765 13.9805 16.6287 14.1318C16.5792 13.8726 16.5495 13.6025 16.5495 13.333C16.5495 11.4111 17.9745 9.8457 19.746 9.8457C20.6663 9.8457 21.4976 10.2666 22.0815 10.9468C22.8039 10.7959 23.4966 10.5044 24.1102 10.105C23.8727 10.9146 23.368 11.5947 22.705 12.0264C23.3482 11.9512 23.9717 11.7563 24.5457 11.4868C24.1103 12.1777 23.566 12.793 22.9425 13.2896Z"
+                            fill="#0E0E0E" fill-opacity="1.000000" fill-rule="nonzero" />
+                    </svg>
+                </a>
+                <a href="https://uz.linkedin.com" class="logo">
+                    <svg width="34.010742" height="34.010742" viewBox="0 0 34.0107 34.0107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                            Created with Pixso.
+                        </desc>
+                        <defs />
+                        <rect id="Rectangle 2" rx="17.005371" width="34.010742" height="34.010742" fill="currentColor"
+                            fill-opacity="1.000000" />
+                        <path id="Vector"
+                            d="M23.9088 9.8457L10.0964 9.8457C9.46344 9.8457 8.94922 10.3364 8.94922 10.939L8.94922 23.915C8.94922 24.5176 9.46344 25.0083 10.0964 25.0083L23.9088 25.0083C24.5417 25.0083 25.0596 24.5176 25.0596 23.915L25.0596 10.939C25.0596 10.3364 24.5417 9.8457 23.9088 9.8457ZM13.8183 22.8423L11.4305 22.8423L11.4305 15.606L13.8219 15.606L13.8219 22.8423L13.8183 22.8423ZM12.6244 14.6177C11.8585 14.6177 11.2399 14.0322 11.2399 13.3149C11.2399 12.5972 11.8585 12.0117 12.6244 12.0117C13.3868 12.0117 14.0089 12.5972 14.0089 13.3149C14.0089 14.0356 13.3904 14.6177 12.6244 14.6177ZM22.7689 22.8423L20.3811 22.8423L20.3811 19.3223C20.3811 18.4829 20.3631 17.4033 19.1404 17.4033C17.8962 17.4033 17.7056 18.3174 17.7056 19.2612L17.7056 22.8423L15.3179 22.8423L15.3179 15.606L17.6085 15.606L17.6085 16.5942L17.6409 16.5942C17.9609 16.0259 18.7413 15.4268 19.9028 15.4268C22.3194 15.4268 22.7689 16.9263 22.7689 18.8755L22.7689 22.8423Z"
+                            fill="#0E0E0E" fill-opacity="1.000000" fill-rule="nonzero" />
+                    </svg></a>
+                <a href="https://instagram.com" target="_blank" class="logo">
+                    <svg width="34.010742" height="34.010742" viewBox="0 0 34.0107 34.0107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                            Created with Pixso.
+                        </desc>
+                        <defs />
+                        <rect id="Rectangle 2" rx="17.005371" width="34.010742" height="34.010742" fill="currentColor"
+                            fill-opacity="1.000000" />
+                        <path id="Vector"
+                            d="M17.0012 10.4023C19.1525 10.4023 19.405 10.4121 20.2552 10.4502C21.0416 10.4854 21.4667 10.6167 21.7512 10.7285C22.1284 10.8755 22.3969 11.0479 22.6782 11.3296C22.9595 11.6108 23.1353 11.8794 23.2791 12.2563C23.3878 12.541 23.522 12.9658 23.5572 13.7524C23.5956 14.6025 23.6052 14.855 23.6052 17.0063C23.6052 19.1577 23.5956 19.4102 23.5572 20.2603C23.522 21.0469 23.391 21.4717 23.2791 21.7563C23.1321 22.1333 22.9595 22.4019 22.6782 22.6831C22.3969 22.9648 22.1284 23.1406 21.7512 23.2842C21.4667 23.3931 21.0416 23.5273 20.2552 23.5625C19.405 23.6006 19.1525 23.6104 17.0012 23.6104C14.85 23.6104 14.5974 23.6006 13.7472 23.5625C12.9608 23.5273 12.5357 23.396 12.2512 23.2842C11.874 23.1372 11.6055 22.9648 11.3242 22.6831C11.0429 22.4019 10.8671 22.1333 10.7233 21.7563C10.6146 21.4717 10.4803 21.0469 10.4452 20.2603C10.4068 19.4102 10.3972 19.1577 10.3972 17.0063C10.3972 14.855 10.4068 14.6025 10.4452 13.7524C10.4803 12.9658 10.6114 12.541 10.7233 12.2563C10.8703 11.8794 11.0429 11.6108 11.3242 11.3296C11.6055 11.0479 11.874 10.8721 12.2512 10.7285C12.5357 10.6196 12.9608 10.4854 13.7472 10.4502C14.5974 10.4087 14.85 10.4023 17.0012 10.4023ZM17.0012 8.95117C14.8148 8.95117 14.5399 8.96094 13.6801 8.99902C12.8234 9.0376 12.2384 9.1748 11.727 9.37305C11.1964 9.57764 10.7488 9.85596 10.3013 10.3032C9.85382 10.751 9.57892 11.2017 9.37115 11.729C9.17297 12.2402 9.03552 12.8252 8.99719 13.6851C8.9588 14.542 8.94922 14.8169 8.94922 17.0029C8.94922 19.1895 8.9588 19.4644 8.99719 20.3242C9.03552 21.1812 9.17297 21.7661 9.37115 22.2808C9.57574 22.811 9.85382 23.2588 10.3013 23.7061C10.7488 24.1538 11.1995 24.4287 11.727 24.6362C12.2384 24.8345 12.8234 24.9722 13.6832 25.0103C14.5431 25.0488 14.8148 25.0581 17.0044 25.0581C19.194 25.0581 19.4657 25.0488 20.3256 25.0103C21.1822 24.9722 21.7672 24.8345 22.2818 24.6362C22.8124 24.4316 23.2599 24.1538 23.7075 23.7061C24.155 23.2588 24.4299 22.8081 24.6376 22.2808C24.8358 21.769 24.9733 21.1841 25.0116 20.3242C25.05 19.4644 25.0596 19.1929 25.0596 17.0029C25.0596 14.8135 25.05 14.542 25.0116 13.6821C24.9733 12.8252 24.8358 12.2402 24.6376 11.7256C24.433 11.1953 24.155 10.7476 23.7075 10.3003C23.2599 9.85254 22.8093 9.57764 22.2818 9.37012C21.7704 9.17188 21.1854 9.03418 20.3256 8.99609C19.4625 8.96094 19.1876 8.95117 17.0012 8.95117Z"
+                            fill="#0E0E0E" fill-opacity="1.000000" fill-rule="nonzero" />
+                        <rect id="Rectangle 8" x="10.257812" y="10.260742" rx="3.000000" width="13.747498"
+                            height="13.747498" fill="#0E0E0E" fill-opacity="1.000000" />
+                        <path id="Vector"
+                            d="M16.9996 12.8672C14.7172 12.8672 12.8633 14.7178 12.8633 17.0034C12.8633 19.2891 14.7172 21.1396 16.9996 21.1396C19.2819 21.1396 21.1358 19.2856 21.1358 17.0034C21.1358 14.7212 19.2819 12.8672 16.9996 12.8672ZM16.9996 19.6885C15.5164 19.6885 14.3145 18.4868 14.3145 17.0034C14.3145 15.5205 15.5164 14.3184 16.9996 14.3184C18.4827 14.3184 19.6846 15.5205 19.6846 17.0034C19.6846 18.4868 18.4827 19.6885 16.9996 19.6885Z"
+                            fill="#FFFFFF" fill-opacity="1.000000" fill-rule="nonzero" />
+                        <path id="Vector"
+                            d="M22.2667 12.7036C22.2667 13.2368 21.8344 13.6689 21.3013 13.6689C20.7681 13.6689 20.3359 13.2368 20.3359 12.7036C20.3359 12.1704 20.7681 11.7383 21.3013 11.7383C21.8344 11.7383 22.2667 12.1704 22.2667 12.7036Z"
+                            fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <script src="./js/app1.js"></script>
 </body>
