--- a/index.html
+++ b/index.html
@@ -805,9 +805,9 @@
                 <p class="talk_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum
                     velit. Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros,
                     rhoncus sit amet dapibus ut.</p>
-                <button class="contact_us">
+                <a href="tel:+998 93 217 73 14" class="contact_us">
                     Contact Us
-                </button>
+                </a>
             </div>
         </div>
     </section>
@@ -815,15 +815,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <ul class="footer_nav">
-                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">Home</a></li>
-                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">About</a></li>
-                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">Services</a></li>
+                    <li class="footer_nav_item"><a href="./index.html" class="footer_nav_link">Home</a></li>
+                    <li class="footer_nav_item"><a href="./about.html" class="footer_nav_link">About</a></li>
+                    <li class="footer_nav_item"><a href="./service.html" class="footer_nav_link">Services</a></li>
                 </ul>
                 <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet nulla in
                     odio
                     ves tibulum porta.</p>
                 <ul class="footer_list">
-                    <li class="footer_item"><a href="#" class="footer_link">FAQS</a></li>
+                    <li class="footer_item"><a href="./service.html#faq" class="footer_link">FAQS</a></li>
                     <li class="footer_item"><a href="#" class="footer_link">BLOGS</a></li>
                     <li class="footer_item"><a href="./index.html#contact" class="footer_link">CONTACTS</a></li>
                 </ul>
